--- a/bonus/index.html
+++ b/bonus/index.html
@@ -7,13 +7,14 @@
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
     <!-- <script src="js/main.js"></script> -->
-    <script src="js/mainStyle.js"></script>
+    <script src="js/main.js"></script>
     <title>Federica Says</title>
 </head>
 <body>
     
     <div class="container">
         <h1 id='titolo'>Federica says</h1>
+        <button id="play">Gioca!</button>
         <h2 id='regole'>Premi i bottoni nella sequenza richiesta</h2>
         <div class="button-container">
             <button id='btn1'></button>
